--- a/Notebooks/A - Knowledge transfer/1. Simple example of how to use Jupyter Notebooks.ipynb
+++ b/Notebooks/A - Knowledge transfer/1. Simple example of how to use Jupyter Notebooks.ipynb
@@ -4,23 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Questionnaire: Section 1 of 2\n",
-    "Before starting to use the iRONs Notebooks could you please answer the questions of Section 1 of 2 of this questionnaire? \n",
-    "Please do not answer the questions of Section 2 of 2 but keep the questionnaire open until you are done with all the Notebooks, then you will be asked to answer Section 2 of 2. \n",
-    "https://forms.gle/wPVHMhdH5qmTnWf36\n",
-    "\n",
-    "The questionnaire aims to evaluate the efficacy of iRONs in communication some technical concepts of hydrological modelling and water reservoir operation\n",
-    "\n",
-    "\n",
     "# Sound wave example\n",
+    "<left><img src=\"../../util/images/Standing_wave.gif\" width=\"400px\">\n",
     "\n",
-    "# 1. Import libraries\n",
-    "To run some of the tools offered by Python we need to import libraries (or toolboxes). Most of them come installed with the Anaconda package, so we only need to import running the code below (NOTE 1: in order to run the code in the box below, place the mouse pointer in the cell, then click on “run cell” button above or press shift + enter) (NOTE 2: if after executing the code, you get an \"ImportError” message, it means you need to install some missing libraries – see [this link](../0%20-%20Tutorials/0.b%20-%20How%20to%20install%20libraries.ipynb) for help):"
+    "In this example we will define and then plot a sound wave which can be represented as a **sine curve** with a certain amplitude, phase and frequency using the following equation:\n",
+    "\n",
+    "$y(x) = A \\sin(2 \\pi(\\nu x + \\phi ))$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$A = amplitude$\n",
+    "\n",
+    "$\\phi = phase$\n",
+    "\n",
+    "$\\nu = frequency$\n",
+    "\n",
+    "## 1. Import libraries\n",
+    "To run some of the tools offered by Python we need to import libraries (or toolboxes). Most of them come installed with the Anaconda package, so we only need to import running the code below (NOTE 1: in order to run the code in the box below, place the mouse pointer in the cell, then click on **“Run” button** above or press **shift + enter**)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,34 +48,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 2. Data\n",
-    "<left><img src=\"../../util/images/Standing_wave.gif\" width=\"400px\">\n",
-    "\n",
-    "In this example we will define and then plot a sound wave which can be represented as a sine curve with a certain amplitude, phase and frequency using the following equation:\n",
-    "\n",
-    "$y(x) = A \\sin(2 \\pi(\\nu x + \\phi ))$\n",
-    "\n",
-    "where\n",
-    "\n",
-    "$A = amplitude$\n",
-    "\n",
-    "$\\phi = phase$\n",
-    "\n",
-    "$\\nu = frequency$\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Definition of the sine curve\n",
+    "## 2. Definition of the sound wave\n",
     "In the cell below we use three variables to define the initial values of the parameters amplitude, phase and frequency, a vector *x* to define the points at which the curve will be evaluated, and a vector *y(x)* to define the curve. For this purpose, we use some of the functions of the imported Numpy library, e.g. *np.linspace* to generate evenly spaced numbers over a specified interval or *np.pi* to get the value of π."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,20 +69,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3. Visualization of the data\n",
-    "### Plot of the curve\n",
-    "Using the imported visualization libraries we can now plot the sine curve using the parameter values (amplitude, phase and frequency) defined in the cell above."
+    "## 3. Visualization of the sound wave\n",
+    "Using the imported visualization libraries we can now plot the sine curve representing the sound wave using the parameter values (amplitude, phase and frequency) defined in the cell above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6ad3ede0dd5423abb8b961accab84ce",
+       "model_id": "aff727910ac64d44867f6f30e99b48d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -134,18 +117,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e0515737722741e0a34515c2b516debf",
+       "model_id": "fdf6972642504fe99314014dd34785c4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Figure(animation_duration=1000, axes=[Axis(label='x', scale=LinearScale(max=1.0, min=0.0)), Axis(label='y', or…"
+       "Figure(animation_duration=1000, axes=[Axis(label='x', scale=LinearScale(max=1.0, min=0.0), side='bottom'), Axi…"
       ]
      },
      "metadata": {},
@@ -155,15 +138,12 @@
    "source": [
     "# Black curve\n",
     "from Modules.sound_wave import sound_wave\n",
-    "\n",
     "xk,yk = sound_wave()\n",
-    "\n",
     "#RMSE\n",
     "RMSE = np.sqrt((y - yk) ** 2).mean()\n",
-    "\n",
     "# Plot\n",
     "fig_2 = plt.figure(scales={'x': x_sc_1, 'y': y_sc_1}, axes=[x_ax_1, y_ax_1], title = 'RMSE = '+str(\"%.2f\" % RMSE), \n",
-    "                   layout={'min_width': '1000px', 'max_height': '300px'}, animation_duration = 1000)\n",
+    "                   layout={'min_width': '900px', 'max_height': '300px'}, animation_duration = 1000)\n",
     "sine_curve_2 = plt.plot(x,y)\n",
     "plt.plot(xk,yk,'k')\n",
     "fig_2"
@@ -178,17 +158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amp = 5\n",
+    "amp = 10\n",
     "phase = 1\n",
     "freq = 10\n",
     "\n",
-    "###############################################\n",
     "sine_curve_2.y = amp * np.sin(2 * np.pi * (freq * x + phase))\n",
-    "\n",
     "RMSE = np.sqrt(((amp * np.sin(2 * np.pi * (freq * x + phase)) - yk) ** 2).mean())\n",
     "fig_2.title = 'RMSE = '+str(\"%.2f\" % RMSE)"
    ]
@@ -203,13 +181,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a20fa4dbf0264aa5a10daae1d6afd1f3",
+       "model_id": "12df65fdc1e84577bf7dfb2e1ef30f3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1111,17 +1089,6 @@
    "source": [
     "#### Let's go to the next section!: [2. Reservoir operation modelling](2.%20Reservoir%20operation%20modelling.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
