--- a/Notebooks/A - Knowledge transfer/2. Reservoir operation modelling.ipynb
+++ b/Notebooks/A - Knowledge transfer/2. Reservoir operation modelling.ipynb
@@ -9,18 +9,12 @@
    },
    "source": [
     "# Reservoir operation modelling\n",
-    "In this Notebook we will see how simulation models and optimisation algorithms can be used to assist the operation of a water reservoir system.\n",
+    "In this Notebook we will see how we can simulate the operation of water supply reservoir system.\n",
     "\n",
     "<left><img src=\"../../util/images/Dam1.gif\" width = \"800px\"><left>\n",
     "    \n",
     "We consider a simple illustrative system where a reservoir is operated to supply water to a domestic consumption node, while ensuring a minimum environmental flow in the downstream river (also called “environmental compensation flow”) and maintaining the water level in the reservoir within prescribed limits. We use a mathematical model to link all the key variables that represent the reservoir dynamics (inflow, storage and outflows) and use model simulation/optimisation to determine the reservoir release scheduling that will best meet the water demand over a coming period of time, given the predicted (or assumed) scenario of future inflows.\n",
-    "<left> <img src=\"../../util/images/system_representation_IO0.png\" width = \"600px\"><left>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "<left> <img src=\"../../util/images/system_representation_IO0.png\" width = \"600px\"><left>\n",
     "## Import libraries\n",
     "Before getting started, let's import some libraries that will be used throughout the Notebook:"
    ]
@@ -54,22 +48,16 @@
     "\n",
     "***s(t)*** = reservoir storage at time-step t, in Vol (for example: ML)\n",
     "\n",
-    "***I(t)*** = reservoir inflows in the interval [t,t+1], in Vol/time (for example: ML/week). This is usually provided by a flow forecasting system or assumed by looking, for example, at historical inflow records for the relevant time of year\n",
+    "***I(t)*** = reservoir inflows in the interval [t,t+1], in Vol/time (for example: ML/week).\n",
     "\n",
-    "***E(t)*** = evaporation from the reservoir surface area in the interval [t,t+1], in Vol/time (for example: ML/week). This is calculated internally to the model, by multipling the evaporation rate for unit surface area (which depends on air temperature) by the reservoir surface area (which is derived from the storage S given that the reservoir geometry is known)\n",
+    "***E(t)*** = evaporation from the reservoir surface area in the interval [t,t+1], in Vol/time (for example: ML/week).\n",
     "\n",
-    "***env(t)*** = environmental compensation flow in the interval [t,t+1], in Vol/time (for example: ML/week). This is usually set to the value that was agreed upon with the environemtal regulator ([Learn more about the rational behind environmental flows](https://www.youtube.com/watch?v=cbUrrYq9BmU))\n",
+    "***env(t)*** = environmental compensation flow in the interval [t,t+1], in Vol/time (for example: ML/week). \n",
     "\n",
-    "***spill(t)*** = outflow through spillways (if any) in the interval [t,t+1], in Vol/time (for example: ML/week). This is calculated internally to the model, and is equal to the excess volume with respect to the maximum reservoir capacity (so most of the time ***spill(t)*** is equal to 0 as the maximum capacity is not reached, but it occasionally is >0 so that the capacity is never exceeded)\n",
+    "***spill(t)*** = outflow through spillways (if any) in the interval [t,t+1], in Vol/time (for example: ML/week). \n",
     "\n",
-    "***Qreg(t)*** = regulated reservoir release for water supply in the interval [t,t+1], in Vol/time (for example: ML/week). This is a completely free variable that the reservoir operator will need to specify\n",
-    "<left> <img src=\"../../util/images/system_representation_IO1.png\" width = \"600px\"><left>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "***Qreg(t)*** = regulated reservoir release for water supply in the interval [t,t+1], in Vol/time (for example: ML/week). \n",
+    "<left> <img src=\"../../util/images/system_representation_IO1.png\" width = \"600px\"><left>\n",
     "#### Implementation of the reservoir simulation function\n",
     "Here we define a function that implements the reservoir simulation, that is, iteratively apply the mass balance equation and reconstruct the temporal evolution of the reservoir variables over the simulation period"
    ]
@@ -153,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d9462ab5ea944529be98101447641d8e",
+       "model_id": "9ce6cd31a31a403895cbcbc6b4ebf9d5",
        "version_major": 2,
        "version_minor": 0
       },
@@ -186,7 +174,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5fc0566c81e3412c9ec720c918996821",
+       "model_id": "87b8dacb4c7740fc98f75302f6a47905",
        "version_major": 2,
        "version_minor": 0
       },
@@ -243,13 +231,8 @@
     "\n",
     "$$TSD = \\sum_{t=1}^{N} [ \\ max( \\ 0, \\ d(t)-Qreg(t) \\ ) \\ ]^2 $$\n",
     "\n",
-    "where N is the length of the simulation period that we are considering, and d(t) is the water demand for each time-interval in that period, and TSD stands for Total Squared Deficit. Notice that the function $max(0,...)$ enables us to only count the difference between demand d and release u when this is positive, that is, when the release u is smaller than the demand d, and a water shortage is indeed produced. Also, the squaring is a 'mathematical trick' to make sure that larger deficit amounts are given more weight than smaller ones. This translates the fact that small deficit amounts are easier to mitigate and hence more acceptable, while larger ones can cause disproportionately severe impacts and should be avoided as much as possible."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "where N is the length of the simulation period that we are considering, and d(t) is the water demand for each time-interval in that period, and TSD stands for Total Squared Deficit. Notice that the function $max(0,...)$ enables us to only count the difference between demand d and release u when this is positive, that is, when the release u is smaller than the demand d, and a water shortage is indeed produced. Also, the squaring is a 'mathematical trick' to make sure that larger deficit amounts are given more weight than smaller ones. This translates the fact that small deficit amounts are easier to mitigate and hence more acceptable, while larger ones can cause disproportionately severe impacts and should be avoided as much as possible.\n",
+    "\n",
     "#### Determining the optimal release scheduling via interactive visualisation\n",
     "\n",
     "Use the slider to set the release amount for each week in the simulation period, and in doing so try to minimise the Total Squared Deficit. "
@@ -263,7 +246,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "214d26cfb69f4bfab8f82b5adc11be31",
+       "model_id": "bb07ddf897dc4ba2bfff0eeda01e13b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,13 +273,8 @@
    "source": [
     "**Comment**: clearly it is not possible to fully meet the demand at all times in the simulation period. For example if we fully cover the demand for the first 7 weeks, we drawdown the reservoir to a point that we are forced to dramatically reduce the release in the last week, causing a very severe deficit. A more effective approach is to cause smaller deficits across all time steps, that is, tolerate some small deficits even when in principle we may fully cover the demand, in order to prevent more severe deficits in the later period. This type of approach is called ***hedging*** (see for example [You and Cai 2008](https://agupubs.onlinelibrary.wiley.com/doi/10.1029/2006WR005481)).\n",
     "\n",
-    "Btw, the minimum TSD value that can be achieved is **49, try to beat it!**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Btw, the minimum TSD value that can be achieved is **49, try to beat it!**\n",
+    "\n",
     "## From single to multi-objective\n",
     "Now let's assume that, besides minimising supply deficits, we are also interested in minimising the chances that the reservoir level go below a minimum threshold. This could be, for example, because the quality of the water deteriorates when levels are low, requiring more costly treatment. We measure how well this criterion is satisfied by the following objective function:\n",
     "\n",
@@ -332,7 +310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a38c1563e1747ea8152fef983800f85",
+       "model_id": "3cd43e69a0ba4657b2377e5dea4287b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -356,13 +334,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Comment*** It is possible to find a release scheduling that produce no violation of the minimum storage threshold, although it will produce some supply deficit - the record is **305, can you beat it?**. However, one could also allow some violation of the storage threshold in order to reduce the deficits. The two objectives are conflicting: improving on one of them implies doing worse on the other."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "***Comment*** It is possible to find a release scheduling that produce no violation of the minimum storage threshold, although it will produce some supply deficit - the record is **305, can you beat it?**. However, one could also allow some violation of the storage threshold in order to reduce the deficits. The two objectives are conflicting: improving on one of them implies doing worse on the other.\n",
+    "\n",
     "### References \n",
     "\n",
     "Deb K. et al (2002) A fast and elitist multiobjective genetic algorithm: NSGA-II, IEEE Transactions on Evolutionary Computation, 6(2), 182-197, doi:10.1109/4235.996017.\n",
@@ -376,13 +349,6 @@
    "source": [
     "#### Let's go to the next section!: [3. Calibration and evaluation of a rainfall-runoff model](3.%20Calibration%20and%20evaluation%20of%20a%20rainfall-runoff%20model.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
