--- a/Notebooks/A - Knowledge transfer/3. Calibration and evaluation of a rainfall-runoff model.ipynb
+++ b/Notebooks/A - Knowledge transfer/3. Calibration and evaluation of a rainfall-runoff model.ipynb
@@ -27,50 +27,24 @@
     "3. **LZ module**: for lower zone runoff generation (***Q1*** = baseflow)\n",
     "4. **Routing module**: for runoff routing.\n",
     "\n",
+    "#### Model parameters:\n",
+    "In order to tailor the general model equations to the particular watershed under study, we need to specify the watershed surface area, and a number of other parameters that characterise the climate, geology, soil properties, etc. of that place. These parameters are: \n",
+    "\n",
     "<left><img src=\"../../Toolbox/Inflow_simulation/HBV model structure.png\" width = \"800px\"><left>\n",
     "\n",
     "#### Forcing inputs\n",
     "\n",
     "The forcing inputs of the model simulation are time series of observed precipitation (***P***) and estimated potential evapotranspiration (***E***) – these are the spatial averages of precipitation and evapotranspiration across the watershed area. Usually these time series are given at daily resolution, and this will be the case in our example too, but it is possible to use shorter time steps.\n",
     "\n",
-    "#### Model parameters:\n",
-    "In order to tailor the general model equations to the particular watershed under study, we need to specify the watershed surface area, and a number of other parameters that characterise the climate, geology, soil properties, etc. of that place. These parameters are: \n",
-    "\n",
-    "\n",
-    "1. ***SSM0***    = initial soil moisture [mm]\n",
-    "2. ***SUZ0***    = initial Upper Zone storage [mm]\n",
-    "3. ***SLZ0***    = initial Lower Zone storage [mm]\n",
-    "4. ***BETA***    = Exponential parameter in soil routine [-]\n",
-    "5. ***LP***      = Limit for potential evapotranspiration [-]\n",
-    "6. ***FC***      = Maximum soil moisture content [mm] \n",
-    "7. ***PERC***    = Maximum flux from Upper to Lower Zone [mm/day]\n",
-    "8. ***K0***      = Near surface flow coefficient\n",
-    "9. ***K1***      = Recession coefficient for the Upper Zone (ratio) [1/day]\n",
-    "10. ***K2***     = Recession coefficient for the Lower Zone (ratio) [1/day]\n",
-    "11. ***UZL***    = Near surface flow threshold [mm]\n",
-    "12. ***MAXBAS*** = Transfer function parameter [day]\n",
-    "\n",
     "#### Model outputs\n",
     "For a given selection of the model parameters and forcing input time series, the model simulation returns time series of the following state and flux variables: \n",
     "\n",
-    "1. ***EA***    = Actual Evapotranspiration [mm/day]\n",
-    "2. ***SM***    = Soil Moisture [mm]\n",
-    "3. ***R***     = Recharge (water flow from Soil to Upper Zone) [mm/day]\n",
-    "4. ***UZ***    = Upper Zone water content [mm]\n",
-    "5. ***LZ***    = Lower Zone water content [mm]\n",
-    "6. ***RL***    = Recharge to the Lower Zone [mm]\n",
     "7. ***Q0***    = Water flow from Upper Zone [ML/day]\n",
     "8. ***Q1***    = Water flow from Lower Zone [ML/day]\n",
-    "9. ***Qsim*** = Total water flow [ML/day]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To run the model we need to import some necessary libraries. **Only if iRONs is run locally**: since three required libraries, [Bqplot](https://bqplot.readthedocs.io/), [Netcdf4](https://pypi.org/project/netCDF4/) and [Platypus](https://platypus.readthedocs.io/en/latest/#), are not available on Anaconda by default, you must have installed them first. Help on how to install such libraries is given here: [How to install libraries](../0%20-%20Tutorials/0.b%20-%20How%20to%20install%20libraries.ipynb). If iRONs is run on the cloud, e.g. on Binder or Microsoft Azure Notebooks, we do not need to install the libraries to import them. \n",
+    "9. ***Qsim*** =  ***Q0 + Q1*** = Total water flow [ML/day]\n",
     "\n",
-    "Once the libraries are installed or in the case that we are running iRONs on the cloud, we can import them with the following code:"
+    "## Import libraries\n",
+    "Before getting started, let's import some libraries that will be used throughout the Notebook:"
    ]
   },
   {
@@ -171,7 +145,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d494eefca0884ab3bbd46198b74dc0f0",
+       "model_id": "75c9b1a965f34d3ba2db26fc98d25e66",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +166,7 @@
     "y_ax_1 = Axis(label='mm/day', scale=y_sc_1, orientation='vertical')\n",
     "\n",
     "fig_1 = plt.figure(title = 'daily precipitation', axes=[x_ax_1, y_ax_1], scales={'x': x_sc_1, 'y': y_sc_1},\n",
-    "                   layout={'min_width': '1000px', 'max_height': '300px'})\n",
+    "                   layout={'min_width': '900px', 'max_height': '300px'})\n",
     "precip_bars = plt.bar(clim_date,P,colors=['blue'],stroke = 'lightgray')\n",
     "fig_1"
    ]
@@ -231,7 +205,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3c04a9d37f74557b72e0106dc9a8c11",
+       "model_id": "bb36197fc1794b28b9e9835b37ec7e74",
        "version_major": 2,
        "version_minor": 0
       },
@@ -251,7 +225,7 @@
     "y_ax_2 = Axis(label='ML/day', scale=y_sc_2, orientation='vertical')\n",
     "\n",
     "fig_2 = plt.figure(title = 'observed daily water flow', axes=[x_ax_2, y_ax_2],scales={'x': x_sc_2, 'y': y_sc_2},\n",
-    "                   layout={'min_width': '1000px', 'max_height': '300px'})\n",
+    "                   layout={'min_width': '900px', 'max_height': '300px'})\n",
     "obs_flow = plt.plot(Q_obs_date,Q_obs,colors=['black'])\n",
     "fig_2"
    ]
@@ -295,29 +269,29 @@
     "    sim_hyd.y = y_vals\n",
     "    fig_3.title = 'RMSE = ' +str(\"%.2f\" % RMSE)\n",
     "\n",
-    "SSM0 = widgets.FloatSlider(min = 0, max = 400, step=10, value = 200, description = 'Initial soil moisture ($mm$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "SSM0 = widgets.FloatSlider(min = 0, max = 400, step=10, value = 200, description = 'Initial soil moisture ($mm$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "SSM0.observe(params_changed,'value')\n",
-    "SUZ0 = widgets.FloatSlider(min = 0, max = 100, step=.5, value = 50, description = 'Initial water content of UZ ($mm$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "SUZ0 = widgets.FloatSlider(min = 0, max = 100, step=.5, value = 50, description = 'Initial water content of UZ ($mm$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "SUZ0.observe(params_changed,'value')\n",
-    "SLZ0 = widgets.FloatSlider(min = 0, max = 100, step=.5, value = 50, description = 'Initial water content of LZ ($mm$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "SLZ0 = widgets.FloatSlider(min = 0, max = 100, step=.5, value = 50, description = 'Initial water content of LZ ($mm$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "SLZ0.observe(params_changed,'value')\n",
-    "BETA = widgets.FloatSlider(min = 0, max = 7, value = 3.5, description = 'Exponential parameter in soil routine (-)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "BETA = widgets.FloatSlider(min = 0, max = 7, value = 3.5, description = 'Exponential parameter in soil routine (-)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "BETA.observe(params_changed,'value')\n",
-    "LP = widgets.FloatSlider(min = 0.3, max = 1, step=0.05, value = 0.65, description = 'Limit for potential evapotranspiration (-)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "LP = widgets.FloatSlider(min = 0.3, max = 1, step=0.05, value = 0.65, description = 'Limit for potential evapotranspiration (-)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "LP.observe(params_changed,'value')\n",
-    "FC = widgets.FloatSlider(min = 1, max = 2000, value = 1000, description = 'Maximum soil moisture content ($mm$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "FC = widgets.FloatSlider(min = 1, max = 2000, value = 1000, description = 'Maximum soil moisture content ($mm$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "FC.observe(params_changed,'value')\n",
-    "PERC = widgets.FloatSlider(min = 0, max = 100, value = 50, description = 'Maximum flow from UZ to LZ ($mm$ $day^{-1}$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "PERC = widgets.FloatSlider(min = 0, max = 100, value = 50, description = 'Maximum flow from UZ to LZ ($mm$ $day^{-1}$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "PERC.observe(params_changed,'value')\n",
-    "K0 = widgets.FloatSlider(min = 0, max = 2, step=0.05, value = 1, description = 'Near surface flow coefficient (-)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "K0 = widgets.FloatSlider(min = 0, max = 2, step=0.05, value = 1, description = 'Near surface flow coefficient (-)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "K0.observe(params_changed,'value')\n",
-    "K1 = widgets.FloatSlider(min = 0, max = 1, value = 0.5, description = 'Recession coefficient for UZ ($day^{-1}$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "K1 = widgets.FloatSlider(min = 0, max = 1, value = 0.5, description = 'Recession coefficient for UZ ($day^{-1}$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "K1.observe(params_changed,'value')\n",
-    "K2 = widgets.FloatSlider(min = 0, max = 0.1, step=0.005, value = 0.05, description = 'Recession coefficient for LZ ($day^{-1}$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "K2 = widgets.FloatSlider(min = 0, max = 0.1, step=0.005, value = 0.05, description = 'Recession coefficient for LZ ($day^{-1}$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "K2.observe(params_changed,'value')\n",
-    "UZL = widgets.FloatSlider(min = 0, max = 100, value = 50, description = 'Near surface flow threshold ($mm$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "UZL = widgets.FloatSlider(min = 0, max = 100, value = 50, description = 'Near surface flow threshold ($mm$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "UZL.observe(params_changed,'value')\n",
-    "MAXBAS = widgets.FloatSlider(min = 1, max = 6, step=0.5, value = 3.5, description = 'Transfer function parameter ($day$)',style = {'description_width': '300px'} ,layout={'width': '1000px'})\n",
+    "MAXBAS = widgets.FloatSlider(min = 1, max = 6, step=0.5, value = 3.5, description = 'Transfer function parameter ($day$)',style = {'description_width': '300px'} ,layout={'width': '900px'})\n",
     "MAXBAS.observe(params_changed,'value')"
    ]
   },
@@ -336,7 +310,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "58a555c806224ee28a75387f90a7bf8e",
+       "model_id": "0e903003b55a4018ac7b5c38ec58476d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -355,7 +329,7 @@
     "ini = [SSM0.value,SUZ0.value,SLZ0.value]\n",
     "param = [BETA.value, LP.value, FC.value, PERC.value, K0.value, K1.value, K2.value, UZL.value, MAXBAS.value]\n",
     "\n",
-    "fig_3 = plt.figure(title = 'RMSE = ' +str(\"%.2f ML/day\" % update_sim_hyd(P,E,param,1,ini)[1]), axes=[x_ax_3, y_ax_3],scales={'x': x_sc_2, 'y': y_sc_2}, layout={'min_width': '1000px', 'max_height': '300px'}, animation_duration=1000)\n",
+    "fig_3 = plt.figure(title = 'RMSE = ' +str(\"%.2f ML/day\" % update_sim_hyd(P,E,param,1,ini)[1]), axes=[x_ax_3, y_ax_3],scales={'x': x_sc_2, 'y': y_sc_2}, layout={'min_width': '900px', 'max_height': '300px'}, animation_duration=1000)\n",
     "obs_hyd = plt.plot(Q_obs_date,Q_obs,colors=['black'])\n",
     "sim_hyd = plt.plot(Q_obs_date,update_sim_hyd(P,E,param,1,ini)[0])\n",
     "sim_hyd.observe(params_changed, ['x', 'y'])\n",
@@ -382,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,13 +377,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "877f8f636ed74d6882de9e0ce6a85ed5",
+       "model_id": "37d1fa5ad1b1476e94048adf6a5fcd01",
        "version_major": 2,
        "version_minor": 0
       },
@@ -428,7 +402,7 @@
     "y_ax_4 = Axis(label='ML/day', scale=y_sc_2, orientation='vertical')\n",
     "         \n",
     "fig_4 = plt.figure(title = 'RMSE = '+str(\"%.2f ML/day\" % RMSE_all[0]), axes=[x_ax_4, y_ax_4],scales={'x': x_sc_2, 'y': y_sc_2},\n",
-    "                   layout={'min_width': '1000px', 'max_height': '300px'}, animation_duration=1000)\n",
+    "                   layout={'min_width': '900px', 'max_height': '300px'}, animation_duration=1000)\n",
     "obs_hyd = plt.plot(Q_obs_date,Q_obs,colors=['black'])\n",
     "sim_hyd_all = plt.plot(Q_obs_date,Q_sim_all)\n",
     "fig_4"
@@ -451,13 +425,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b35d16382ac148b78435e33c00137b41",
+       "model_id": "57c59eea540b4092aff064440bbd9626",
        "version_major": 2,
        "version_minor": 0
       },
@@ -473,7 +447,7 @@
     "x_ax_5 = Axis(label='date', scale=x_sc_2)\n",
     "y_ax_5 = Axis(label='ML/day', scale=y_sc_2, orientation='vertical')\n",
     "         \n",
-    "fig_5 = plt.figure(title = 'Low flows: observed daily water flow < 50th percentile', axes=[x_ax_5, y_ax_5],scales={'x': x_sc_2, 'y': y_sc_2},layout={'min_width': '1000px', 'max_height': '300px'}, animation_duration=1000)\n",
+    "fig_5 = plt.figure(title = 'Low flows: observed daily water flow < 50th percentile', axes=[x_ax_5, y_ax_5],scales={'x': x_sc_2, 'y': y_sc_2},layout={'min_width': '900px', 'max_height': '300px'}, animation_duration=1000)\n",
     "obs_hyd_lt50 = plt.plot(x=Q_obs_date,y=Q_obs,colors=['black'])\n",
     "lt50 = plt.plot(x=Q_obs_date,y=np.minimum(Q_obs/Q_obs*np.percentile(Q_obs, 50),Q_obs),opacities = [0], fill = 'bottom',fill_opacities = [0.5])\n",
     "p50  = plt.plot(x=Q_obs_date,y=Q_obs/Q_obs*np.percentile(Q_obs, 50), line_style = 'dashed')\n",
@@ -515,7 +489,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "915066e8f40949b89756d3362befa713",
+       "model_id": "3da9aaf9d83e4a7c8c000296869b0eb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -531,7 +505,7 @@
     "x_ax_6 = Axis(label='date', scale=x_sc_2)\n",
     "y_ax_6 = Axis(label='ML/day', scale=y_sc_2, orientation='vertical')\n",
     "         \n",
-    "fig_6 = plt.figure(title = 'RMSE = '+str(\"%.2f ML/day\" % RMSE_low[0]), axes=[x_ax_6, y_ax_6],scales={'x': x_sc_2, 'y': y_sc_2},layout={'min_width': '1000px', 'max_height': '300px'}, animation_duration=1000)\n",
+    "fig_6 = plt.figure(title = 'RMSE = '+str(\"%.2f ML/day\" % RMSE_low[0]), axes=[x_ax_6, y_ax_6],scales={'x': x_sc_2, 'y': y_sc_2},layout={'min_width': '900px', 'max_height': '300px'}, animation_duration=1000)\n",
     "obs_hyd = plt.plot(Q_obs_date,Q_obs,colors=['black'])\n",
     "sim_hyd_low = plt.plot(Q_obs_date,Q_sim_low)\n",
     "fig_6"
@@ -574,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {
     "code_folding": []
    },
@@ -582,7 +556,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ea9433aeaf3d4d028cd5d05a2da81a18",
+       "model_id": "d6ff895af4ba47a485975401a213c6f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -617,7 +591,7 @@
     "y_ax_pf = Axis(label='RMSE High flows', scale=y_sc_pf, orientation='vertical')\n",
     "  \n",
     "fig_pf = plt.figure(title = 'Interactive Pareto front (Calibration)', axes=[x_ax_pf, y_ax_pf],\n",
-    "                    layout={'width': '800px', 'height': '600px'}, animation_duration=1000)\n",
+    "                    layout={'width': '500px', 'height': '400px'}, animation_duration=1000)\n",
     "pareto_front = plt.scatter(results_double_low[:],results_double_high[:],scales={'x': x_sc_pf, 'y': y_sc_pf},\n",
     "                           colors=['deepskyblue'], interactions={'hover':'tooltip','click': 'select'})\n",
     "pareto_front.unselected_style={'opacity': 0.4}\n",
@@ -634,7 +608,7 @@
     "x_ax_7 = Axis(label='date', scale=x_sc_7)\n",
     "y_ax_7 = Axis(label='ML/day', scale=y_sc_7, orientation='vertical')\n",
     "\n",
-    "fig_7 = plt.figure(axes=[x_ax_7, y_ax_7], layout={'min_width': '1000px', 'max_height': '300px'}, animation_duration=1000,\n",
+    "fig_7 = plt.figure(axes=[x_ax_7, y_ax_7], layout={'min_width': '900px', 'max_height': '300px'}, animation_duration=1000,\n",
     "                   scales={'x': x_sc_7, 'y': y_sc_7})\n",
     "obs_hyd = plt.plot(Q_obs_date,Q_obs,colors=['black'])\n",
     "sim_hyd_double = plt.plot(Q_obs_date,update_sol_hyd(pareto_front.selected[0])[0])\n",
@@ -652,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "code_folding": []
    },
@@ -660,7 +634,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b143c56eb864fdab8e50bbe56d81189",
+       "model_id": "46d817bd0f6e4c64ad65aee773046c6f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -719,8 +693,8 @@
     "x_ax_pf_val = Axis(label='RMSE Low flows', scale=x_sc_pf_val)\n",
     "y_ax_pf_val = Axis(label='RMSE High flows', scale=y_sc_pf_val, orientation='vertical')\n",
     "  \n",
-    "fig_pf_val = plt.figure(title = 'Interactive Pareto front (Validation)', axes=[x_ax_pf_val, y_ax_pf_val],\n",
-    "                        layout={'width': '800px', 'height': '600px'}, animation_duration=1000)\n",
+    "fig_pf_val = plt.figure(title = 'Interactive Pareto front (Evaluation)', axes=[x_ax_pf_val, y_ax_pf_val],\n",
+    "                        layout={'width': '500px', 'height': '400px'}, animation_duration=1000)\n",
     "pareto_front_selected = plt.scatter([results_double_low_val[pareto_front.selected[0]]],\n",
     "                                    [results_double_high_val[pareto_front.selected[0]]],\n",
     "                                    marker = 'cross',scales={'x': x_sc_pf_val, 'y': y_sc_pf_val},\n",
@@ -742,7 +716,7 @@
     "x_ax_8 = Axis(label='date', scale=x_sc_8)\n",
     "y_ax_8 = Axis(label='ML/day', scale=y_sc_8, orientation='vertical')\n",
     "\n",
-    "fig_8 = plt.figure(axes=[x_ax_8, y_ax_8], layout={'min_width': '1000px', 'max_height': '300px'}, animation_duration=1000,\n",
+    "fig_8 = plt.figure(axes=[x_ax_8, y_ax_8], layout={'min_width': '900px', 'max_height': '300px'}, animation_duration=1000,\n",
     "                   scales={'x': x_sc_8, 'y': y_sc_8})\n",
     "obs_hyd_val = plt.plot(Q_obs_date_val,Q_obs_val,colors=['black'])\n",
     "sim_hyd_double_val = plt.plot(Q_obs_date_val,update_sol_hyd_val(pareto_front_val.selected[0])[0])\n",
@@ -776,13 +750,6 @@
    "source": [
     "#### Let's go to the next section!: [4.\tReservoir operation optimisation](4.%20Reservoir%20operation%20optimisation.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
